<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuItemAddPhoto"
        android:icon="@drawable/ic_add_a_photo_black_24dp"
        android:title="@string/add_photo"
        app:showAsAction="always" />

    <item android:title="@string/save"
        android:id="@+id/menuItemSave"
        app:showAsAction="always"/>

    <item android:title="@string/delete"
        android:id="@+id/menuItemDelete"
        android:icon="@drawable/ic_delete_forever_black_24dp"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item android:title="@string/edit"
        android:id="@+id/menuItemEdit"
        android:visible="false"
        app:showAsAction="ifRoom"/>

</menu>