<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <RadioGroup
        android:id="@+id/radioGroupFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/filter_by"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButtonNone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checked="true"
            android:layout_weight="1"
            android:text="@string/none" />

        <RadioButton
            android:id="@+id/radioButtonManufacturer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:text="@string/manufacturer" />

        <RadioButton
            android:id="@+id/radioButtonModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/model"
            android:textSize="16sp" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spinnerManufacturer"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        android:spinnerMode="dialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupFilter" />

    <Spinner
        android:id="@+id/spinnerModel"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:spinnerMode="dialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerManufacturer" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:id="@+id/radioGroupFilterSort"
        app:layout_constraintStart_toEndOf="@+id/radioGroupFilter"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:textSize="18sp"
            android:text="@string/sort_by" />

        <RadioButton
            android:id="@+id/radioButtonNoSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:layout_weight="1"
            android:text="@string/no_sort" />

        <RadioButton
            android:id="@+id/radioButtonSortAsc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:layout_weight="1"
            android:text="@string/sort_by_price_ascending" />

        <RadioButton
            android:id="@+id/radioButtonSortDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:layout_weight="1"
            android:text="@string/sort_by_price_descending" />
    </RadioGroup>
</android.support.constraint.ConstraintLayout>